P532F19T2-62: Using java util to encode and decode image to/from base64
https://test.uisapp2.iu.edu/jira-stg/browse/P532F19T2-68